2015-01-06         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* test/Makefile.am (LINTTESTS): Remove nonblock to eliminate lint
	warnings that differ depending on the platform.
	(REGTESTS): Add nonblock.
	* test/nonblock.ok: Remove lint warnings.

2015-01-06         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* doc/select.3am: Gawk bug has been fixed, so remove warning about
	PROCINFO.
	* multiplex.awk{,2}.awk: No need to announce my pid.
	* select.c (set_retry): No need for extra byte at end of string.
	* test/select.awk: No longer necessary to refer to PROCINFO, since the
	gawk bug has been fixed.
	* test/signal.{awk, ok}: Remove race condition that made this test
	unreliable.

2015-01-05         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* doc/select.3am: Document that set_non_blocking cannot instantiate
	the PROCINFO array properly.

2015-01-05         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* README: Enhance.
	* doc/select.3am: Improve formatting.
	* multiplex{,2}.awk: Should close pipes after they return EOF.
	* test/Makefile.am: Add many new tests.
	* test/*: Add tests of all functions.

2015-01-04         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (select_la_LIBADD): Add -lgawkextlib.
	(signal2name.h, name2signal.h): Fix make rule.
	* select.c (do_select, do_set_non_blocking, do_input_fd, do_output_fd):
	The get_file API no longer takes a typelen argument.
	(set_retry): Use gawkextlib helper function gawk_varinit_array.

2015-01-02         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* select.c (signame2num): Fix signed vs unsigned comparison warning.

2015-01-02         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* doc/select.3am: Document the extension.
	* test/Makfile.am (EXTRA_DIST, select): Add "kill" test.
	* test/kill.{awk,ok}: Add new test.

2014-12-31         Andrew J. Schorr     <aschorr@telemetry-investments.com>
